--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Discourse posts are posted to Facebook.",
   "main": "lib/index.js",
   "scripts": {
+    "lint": "eslint -c .eslintrc src",
+    "lintfix": "eslint -c .eslintrc src --fix",
     "build": "babel src --presets babel-preset-es2015 --out-dir lib",
     "prestart": "npm run build",
-    "dev": "npm run build && pm2 start ./pm2.json --no-daemon logs",
+    "dev": "npm run lint && npm run build && pm2 start ./pm2.json --no-daemon logs",
     "start": "pm2 start ./pm2.json",
     "start-docker": "pm2 start ./pm2.json --no-daemon logs",
     "restart": "pm2 restart ./pm2.json",
@@ -27,11 +29,15 @@
   },
   "homepage": "https://github.com/gimdongwoo/discourse-facebook-post#readme",
   "dependencies": {
+    "fb": "^2.0.0",
     "nodemailer": "^3.1.1",
     "request": "^2.79.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
