--- a/package.json
+++ b/package.json
@@ -7,13 +7,27 @@
     "lint": "eslint -c .eslintrc src",
     "lintfix": "eslint -c .eslintrc src --fix",
     "build": "babel src --presets babel-preset-es2015 --out-dir lib",
-    "prestart": "npm run build",
-    "dev": "npm run lint && npm run build && pm2 start ./pm2.json --no-daemon logs",
+    "prestart": "npm run build && better-npm-run access-token",
+    "dev": "npm run lint && npm run prestart && better-npm-run dev-deamon",
     "start": "pm2 start ./pm2.json",
     "start-docker": "pm2 start ./pm2.json --no-daemon logs",
     "restart": "pm2 restart ./pm2.json",
     "stop": "pm2 stop ./pm2.json",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "betterScripts": {
+    "access-token": {
+      "command": "node ./lib/facebookAccessToken.js",
+      "env": {
+        "NODE_ENV": "developemnt"
+      }
+    },
+    "dev-deamon": {
+      "command": "node ./lib/index.js",
+      "env": {
+        "NODE_ENV": "developemnt"
+      }
+    }
   },
   "engines": {
     "node": ">=6.9.0"
@@ -29,8 +43,10 @@
   },
   "homepage": "https://github.com/gimdongwoo/discourse-facebook-post#readme",
   "dependencies": {
+    "better-npm-run": "0.0.15",
     "fb": "^2.0.0",
     "nodemailer": "^3.1.1",
+    "readline": "^1.3.0",
     "request": "^2.79.0"
   },
   "devDependencies": {
