--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prestart": "npm run build && better-npm-run access-token",
     "dev": "npm run lint && npm run prestart && better-npm-run dev-deamon",
     "start": "pm2 start ./pm2.json",
-    "start-docker": "pm2 start ./pm2.json --no-daemon logs",
+    "start-docker": "npm run prestart && pm2 start ./pm2.json --no-daemon logs",
     "restart": "pm2 restart ./pm2.json",
     "stop": "pm2 stop ./pm2.json",
     "test": "echo \"Error: no test specified\" && exit 1"
