--- a/.env_sample
+++ b/.env_sample
@@ -1,6 +1,5 @@
 DISCOURSE_URL=https://jsdev.kr
-FACEBOOK_APP_ID=
-FACEBOOK_SECRET=
-FACEBOOK_GROUP_ID=124900807643966
-POLLING_INTERVAL_SEC=60
+POLLING_INTERVAL_SEC=20
 POSTED_AFTER_MIN=5
+FBUSER=""
+FBPASS=""
