--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,6 @@
 DISCOURSE_URL=https://jsdev.kr
-POLLING_INTERVAL_SEC=20
+POLLING_INTERVAL_SEC=60
 POSTED_AFTER_MIN=5
-FBUSER=""
-FBPASS=""
+FACEBOOK_GROUP_URL=
+FACEBOOK_USER=
+FACEBOOK_PASS=
