--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "dev": "node index.js",
+    "start": "pm2 start ./pm2.json",
+    "stop": "pm2 stop ./pm2.json",
+    "log": "pm2 logs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +16,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "pm2": "^3.2.2",
     "puppeteer": "^1.9.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
