--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "crossenv NODE_ENV=development node index.js",
+    "dev": "cross-env NODE_ENV=development node index.js",
     "start": "pm2 start ./pm2.json",
     "stop": "pm2 stop ./pm2.json",
     "log": "pm2 logs",
@@ -21,6 +21,6 @@
     "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "crossenv": "0.0.2-security"
+    "cross-env": "^5.2.0"
   }
 }
