--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "discourse-facebook-hook",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node index.js",
+    "dev": "cross-env NODE_ENV=development ts-node src/index.ts",
+    "build": "rimraf dist && tsc",
     "start": "pm2 start ./pm2.json",
     "stop": "pm2 stop ./pm2.json",
     "log": "pm2 logs",
@@ -13,14 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/puppeteer": "^1.12.1",
+    "@types/request-promise": "^4.1.42",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "puppeteer": "^1.11.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0"
+    "cross-env": "^5.2.0",
+    "ts-node": "^8.0.2",
+    "typescript": "^3.3.1"
   }
 }
