make multi runnable

--- a/.env_sample
+++ b/.env_sample
@@ -1,6 +1,8 @@
-DISCOURSE_URL=https://jsdev.kr
-POLLING_INTERVAL_SEC=60
-POSTED_AFTER_MIN=5
-FACEBOOK_GROUP_URL=
-FACEBOOK_USER=
-FACEBOOK_PASS=
+NODE_ENV=development
+
+SITE_0_PORT=8080
+SITE_0_POSTED_AFTER_MIN=5
+SITE_0_DISCOURSE_URL=https://jsdev.kr
+SITE_0_FACEBOOK_GROUP_ID=124900807643966
+SITE_0_FACEBOOK_USER=
+SITE_0_FACEBOOK_PASS=
