--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "cross-env NODE_ENV=development ts-node src/index.ts",
     "build": "rimraf dist && tsc",
     "start": "npm run build && pm2 start ./pm2.json",
-    "stop": "pm2 stop ./pm2.json",
+    "stop": "pm2 stop ./pm2.json && pm2 delete ./pm2.json",
     "log": "pm2 logs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
