--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "es2016",
       "es2017",
       "es2018",
-      "esnext"
+      "esnext",
+      "dom"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
